--- a/templates/courseinfo/course_detail.html
+++ b/templates/courseinfo/course_detail.html
@@ -6,6 +6,12 @@
 
 {% block content %}
     <h2>{{ course }}</h2>
+     <ul>
+        <li>
+            <a href="{{ course.get_update_url }}">Edit Course</a>
+        </li>
+     <li><a href="{{ course.get_delete_url }}">Delete Course</a></li>
+    </ul>
 
     <section>
         <table>
@@ -29,7 +35,7 @@
         <ul>
             {% for section in section_list %}
                 <li>
-                    <a href="">{{ section }}</a>
+                    <a href="{{ section.get_absolute_url }}">{{ section }}</a>
                 </li>
             {% empty %}
                 <li><em>Section for this course is not found.</em></li>
