--- a/templates/courseinfo/instructor_list.html
+++ b/templates/courseinfo/instructor_list.html
@@ -6,10 +6,16 @@
 
 {% block content %}
     <h2>Instructor List</h2>
+    <div>
+        <a href="{% url 'courseinfo_instructor_create_urlpattern' %}">
+            Create New Instructor
+        </a>
+    </div>
+
     <ul>
     {%  for instructor in instructor_list %}
         <li>
-            <a href="">{{ instructor }}</a>
+            <a href=" {{  instructor.get_absolute_url }} ">{{ instructor }}</a>
         </li>
     {% empty %}
         <li><em>There are currently no instructors available.</em></li>
