--- a/templates/courseinfo/section_detail.html
+++ b/templates/courseinfo/section_detail.html
@@ -6,12 +6,18 @@
 
 {% block content %}
     <h2>{{ section }}</h2>
+     <ul>
+        <li>
+            <a href="{{ section.get_update_url }}">Edit Section</a>
+        </li>
+     <li><a href="{{ section.get_delete_url }}">Delete Section</a></li>
+    </ul>
 
     <section>
         <table>
             <tr>
                <th>Course:</th>
-                <td><a href="">{{ course }}</a> </td>
+                <td><a href="{{ course.get_absolute_url }}">{{ course }}</a> </td>
             </tr>
              <tr>
                <th>Section Name:</th>
@@ -19,11 +25,11 @@
             </tr>
             <tr>
                <th>Semster:</th>
-                <td><a href="">{{ semester }}</a></td>
+                <td><a href="{{ semester.get_absolute_url }}">{{ semester }}</a></td>
             </tr>
             <tr>
                <th>Instructor:</th>
-                <td><a href="">{{ instructor }}</a></td>
+                <td><a href="{{ instructor.get_absolute_url }}">{{ instructor }}</a></td>
             </tr>
         </table>
     </section>
@@ -33,7 +39,7 @@
         <ul>
             {% for registration in registration_list %}
                 <li>
-                    <a href="">{{ registration.student }}</a>
+                    <a href="{{ registration.get_absolute_url }}">{{ registration.student }}</a>
                 </li>
             {% empty %}
                 <li><em>There are currently no students registered for this section.</em></li>
