--- a/templates/courseinfo/semester_detail.html
+++ b/templates/courseinfo/semester_detail.html
@@ -6,6 +6,12 @@
 
 {% block content %}
     <h2>{{ semester }}</h2>
+     <ul>
+        <li>
+            <a href="{{ semester.get_update_url }}">Edit Semester</a>
+        </li>
+     <li><a href="{{ semester.get_delete_url }}">Delete Semester</a></li>
+    </ul>
 
     <section>
         <table>
@@ -25,7 +31,7 @@
         <ul>
             {% for section in section_list %}
                 <li>
-                    <a href="">{{ section }}</a>
+                    <a href="{{ section.get_absolute_url }}">{{ section }}</a>
                 </li>
             {% empty %}
                 <li><em>There are currently no sections for this semester.</em></li>
