Authentication and Admin Assignment

--- a/courseinfo/templates/courseinfo/course_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/course_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete course {{ course }}?
         </p>
 
-        <a href="{{ course.get_absolute_url }}">Cancel</a>
+        <a href="{{ course.get_absolute_url }}" class="button">Cancel</a>
         <button type="submit">Delete Course</button>
     </form>
 {% endblock %}
