--- a/courseinfo/templates/courseinfo/semester_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/semester_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete semester {{ semester }}?
         </p>
 
-        <a href="{{ semester.get_absolute_url }}">Cancel</a>
+        <a href="{{ semester.get_absolute_url }}"class="button">Cancel</a>
         <button type="submit">Delete Semester</button>
     </form>
 {% endblock %}
