--- a/courseinfo/templates/courseinfo/instructor_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/instructor_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete instructor {{ instructor }}?
         </p>
 
-        <a href="{{ instructor.get_absolute_url }}">Cancel</a>
+        <a href="{{ instructor.get_absolute_url }}"class="button">Cancel</a>
         <button type="submit">Delete Instructor</button>
     </form>
 {% endblock %}
