--- a/courseinfo/templates/courseinfo/registration_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/registration_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete registration {{ registration }}?
         </p>
 
-        <a href="{{ registration.get_absolute_url }}">Cancel</a>
+        <a href="{{ registration.get_absolute_url }}"class="button">Cancel</a>
         <button type="submit">Delete Registration</button>
     </form>
 {% endblock %}
