--- a/courseinfo/templates/courseinfo/section_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/section_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete section {{ section }}?
         </p>
 
-        <a href="{{ section.get_absolute_url }}">Cancel</a>
+        <a href="{{ section.get_absolute_url }}"class="button">Cancel</a>
         <button type="submit">Delete Section</button>
     </form>
 {% endblock %}
