--- a/courseinfo/templates/courseinfo/student_confirm_delete.html
+++ b/courseinfo/templates/courseinfo/student_confirm_delete.html
@@ -12,7 +12,7 @@
             Are you sure you want to delete student {{ student }}?
         </p>
 
-        <a href="{{ student.get_absolute_url }}">Cancel</a>
+        <a href="{{ student.get_absolute_url }}"class="button">Cancel</a>
         <button type="submit">Delete Student</button>
     </form>
 {% endblock %}
